[tool.poetry]
name = "legalbench"
version = "0.0.0"
description = "Code for supporting LegalBench"
authors = ["Neel Guha"]

[tool.poetry.dependencies]
argparse = "^1.4.0"
python = ">=3.8,<4.0.0"
numpy = "^1.22.3"
rich = "^12.0.0"
ujson = "^5.1.0"
tqdm = "^4.63.0"
pandas = "^1.4.1"
pathlib = "^1.0.1"
jupyter = "^1.0.0"
string-grouper = "^0.6.1"
transformers = "^4.18.0"
openai = "^0.19.0"
matplotlib = "^3.5.2"